force-app/main/default/objects/custom_create142__c/custom_create142__c.object-meta.xml
<CustomObject>
    <label>Custom created object142</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects142</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>