force-app/main/default/objects/custom_create142__c/fields/custom_create_142field523__c.field-meta.xml
<CustomField>
    <fullName>custom_create_142field523__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 142field523</label>
    <type>Checkbox</type>
</CustomField>